interactive bg fix

--- a/src/App.css
+++ b/src/App.css
@@ -271,7 +271,7 @@ html,body{
   /* color: white; */
   /* font-size: 25px; */
   /* top: 35%; */
-  position:relative;
+  /* position:relative; */
   /* background-image: linear-gradient(to right ,#d3a13b); */
   background-clip: text;
   color: transparent;
