--- a/src/App.css
+++ b/src/App.css
@@ -528,13 +528,19 @@ input {
     font-weight: 900
   }
   .main{
-    height: 100vh!important;
+    /* height: 100vh!important; */
     width: 100vw;
+    
+  }
+  .main .s1{
+    /* height: 100vh!important; */
+   flex-direction: row;
+   
     
   }
   .main h2{
     text-align: center;
-    /* font-size: 20px; */
+    font-size: 16px;
 
   }
   #help canvas{
@@ -556,10 +562,12 @@ input {
     align-items: center;
     justify-content: center;
   }
-  /* .s1,.s2{
-    height: 100vh;
-    width: 100vw
-  } */
+  .s1{
+    height: 100px;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+  }
   
   
 }
